--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/oba_logo.jpeg
-    - assets/return.png
-    - assets/origin.jpeg
-    - assets/angels_demons.jpeg
-    - assets/da_vinci_code.jpeg
-    - assets/inferno.jpeg
-    - assets/lost_symbol.jpeg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
